Workaround for build issues when using Scala 2.11 without Zinc server